...
            "state": "translated",
            "value": "列表"
          }
        }
      }
    },
    "Lists": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "リスト"
          }
...
            "state": "translated",
            "value": "运维"
          }
        }
      }
    },
    "Other mail": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "ほかのメール"
          }
...
            "state": "translated",
            "value": "服务器"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "設定"
          }
...
